--- a/seller/templates/seller-base.html
+++ b/seller/templates/seller-base.html
@@ -198,16 +198,7 @@
 					</a>
 				</div>
 
-				<p class="stext-107 cl6 txt-center">
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy;
-					<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i
-						class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com"
-						target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com"
-						target="_blank">ThemeWagon</a>
-					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-
-				</p>
+				
 			</div>
 		</div>
 	</footer>
@@ -390,7 +381,7 @@
 	<!--===============================================================================================-->
 	<script src="{% static 'vendor/animsition/js/animsition.min.js' %}"></script>
 	<!--===============================================================================================-->
-	<script src="{% static 'vendor/bootstrap/js/popper.js"></script>
+	<script src="{% static 'vendor/bootstrap/js/popper.js' %}"></script>
 	<script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
 	<!--===============================================================================================-->
 	<script src="{% static 'vendor/select2/select2.min.js' %}"></script>
@@ -404,12 +395,12 @@
 	</script>
 	<!--===============================================================================================-->
 	<script src="{% static 'vendor/daterangepicker/moment.min.js' %}"></script>
-	<script src="{% static 'vendor/daterangepicker/daterangepicker.js"></script>
+	<script src="{% static 'vendor/daterangepicker/daterangepicker.js' %}"></script>
 	<!--===============================================================================================-->
 	<script src="{% static 'vendor/slick/slick.min.js' %}"></script>
 	<script src="{% static 'js/slick-custom.js' %}"></script>
 	<!--===============================================================================================-->
-	<script src="{% static 'vendor/parallax100/parallax100.js"></script>
+	<script src="{% static 'vendor/parallax100/parallax100.js' %}"></script>
 	<script>
 		$('.parallax100').parallax100();
 	</script>
