--- a/seller/templates/seller-signup.html
+++ b/seller/templates/seller-signup.html
@@ -18,51 +18,60 @@
 		<div class="container">
 			<div class="flex-w flex-tr">
 				<div class="size-210 bor10 p-lr-70 p-t-55 p-b-70 p-lr-15-lg w-full-md">
-					{% if email_id %}
 					<form method="post" action="{% url 'seller_signup' %}">
-					{% csrf_token %}
-						<h4 class="mtext-105 cl2 txt-center p-b-30">
-							Sign Up Here
-						</h4>
+{% csrf_token %}
+    <h4 class="mtext-105 cl2 txt-center p-b-30">
+        Sign Up Here
+    </h4>
 
-						<div class="bor8 m-b-20 how-pos4-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="text" name="fname" placeholder="Enter Your First Name">
-						</div>
-						<div class="bor8 m-b-20 how-pos5-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="text" name="lname" placeholder="Enter Your Last Name">
-						</div>
-						
-						<div class="bor8 m-b-20 how-pos4-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="email" name="email"  value="{{email_id}}" readonly>
-						
-						</div>
-						<div class="bor8 m-b-20 how-pos5-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="number" name="phone" placeholder="Enter Your Phone Number">
-						</div>
-						<div class="bor8 m-b-30">
-							<textarea class="stext-111 cl2 plh3 size-120 p-lr-28 p-tb-25" name="address" placeholder="Enter Your Address"></textarea>
-						</div>
-						<div class="bor8 m-b-20 how-pos4-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="password" name="password" placeholder="Enter Your Password">
-						</div>
-						<div class="bor8 m-b-20 how-pos4-parent">
-							<input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" type="password" name="c_password" placeholder="Conform your Password">
-						</div>
-						<div>
-							{% if msg_s %}
-								<p style="color: green;">{{msg_s}}</p>
-							{% endif %}
-						</div>
-						<div>
-							{% if msg_d %}
-								<p style="color: red;">{{msg_d}}</p>
-							{% endif %}
-						</div>
-						<button class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
-							Create Account
-						</button>
-					</form>
-					{% endif %}
+    <div class="bor8 m-b-20 how-pos4-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="text" name="fname" placeholder="Enter Your First Name">
+    </div>
+
+    <div class="bor8 m-b-20 how-pos5-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="text" name="lname" placeholder="Enter Your Last Name">
+    </div>
+
+    <div class="bor8 m-b-20 how-pos4-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="email" name="email" value="{{email_id}}" readonly>
+    </div>
+
+    <div class="bor8 m-b-20 how-pos5-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="number" name="phone" placeholder="Enter Your Phone Number">
+    </div>
+
+    <div class="bor8 m-b-30">
+        <textarea class="stext-111 cl2 plh3 size-120 p-lr-28 p-tb-25" 
+                  name="address" placeholder="Enter Your Address"></textarea>
+    </div>
+
+    <div class="bor8 m-b-20 how-pos4-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="password" name="password" placeholder="Enter Your Password">
+    </div>
+
+    <div class="bor8 m-b-20 how-pos4-parent">
+        <input class="stext-111 cl2 plh3 size-116 p-l-62 p-r-30" 
+               type="password" name="c_password" placeholder="Confirm Your Password">
+    </div>
+
+    {% if msg_s %}
+        <p style="color: green;">{{msg_s}}</p>
+    {% endif %}
+
+    {% if msg_d %}
+        <p style="color: red;">{{msg_d}}</p>
+    {% endif %}
+
+    <button class="flex-c-m stext-101 cl0 size-121 bg3 bor1 hov-btn3 p-lr-15 trans-04 pointer">
+        Create Account
+    </button>
+</form>
+
 				</div>
 
 				<div class="size-210 bor10 flex-w flex-col-m p-lr-93 p-tb-30 p-lr-15-lg w-full-md">
